--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^17.0.2",
     "react-toastify": "^8.1.0",
     "secp256k1": "^5.0.0",
+    "sweetalert": "^2.1.2",
     "tailwindcss": "^3.4.3",
     "uuid": "^9.0.0",
     "web-vitals": "^1.0.1"
